--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -26,6 +26,9 @@ jobs:
         with:
           languages: java
 
+      - name: Build
+        run: mvn compile -B -q
+
       - uses: github/codeql-action/analyze@v3
         with:
           category: "/language:java"
