--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,8 @@
         <!-- Code Quality Plugins -->
         <spotless.version>2.44.0</spotless.version>
         <google-java-format.version>1.25.2</google-java-format.version>
-        <spotbugs-plugin.version>4.8.6.5</spotbugs-plugin.version>
-        <pmd-plugin.version>3.25.0</pmd-plugin.version>
+        <sonar.organization>neobnsrnd-team</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <!-- Test -->
         <archunit.version>1.3.0</archunit.version>
     </properties>
@@ -202,43 +202,6 @@
                     <execution>
                         <goals><goal>check</goal></goals>
                         <phase>validate</phase>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <!-- ── SpotBugs (Bug Detection) ── -->
-            <plugin>
-                <groupId>com.github.spotbugs</groupId>
-                <artifactId>spotbugs-maven-plugin</artifactId>
-                <version>${spotbugs-plugin.version}</version>
-                <configuration>
-                    <effort>Max</effort>
-                    <threshold>Medium</threshold>
-                    <xmlOutput>true</xmlOutput>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals><goal>check</goal></goals>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <!-- ── PMD (Code Quality) ── -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-pmd-plugin</artifactId>
-                <version>${pmd-plugin.version}</version>
-                <configuration>
-                    <failOnViolation>true</failOnViolation>
-                    <printFailingErrors>true</printFailingErrors>
-                    <minimumTokens>100</minimumTokens>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>check</goal>
-                            <goal>cpd-check</goal>
-                        </goals>
                     </execution>
                 </executions>
             </plugin>
