--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <google-java-format.version>1.25.2</google-java-format.version>
         <sonar.organization>neobnsrnd-team</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <sonar.projectKey>neobnsrnd-team_spider-admin-v2</sonar.projectKey>
         <!-- Test -->
         <archunit.version>1.3.0</archunit.version>
     </properties>
