--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,24 +1,9 @@
 spring:
-  datasource:
-    url: jdbc:h2:mem:spider-local;DB_CLOSE_DELAY=-1;MODE=MySQL
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
-  sql:
-    init:
-      mode: always
-      encoding: UTF-8
-      schema-locations: classpath:db/h2/ddl/security.sql
-      data-locations: classpath:db/h2/dml/security.sql
   thymeleaf:
     cache: false
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
 
 mybatis:
-  mapper-locations: classpath:mapper/mysql/**/*.xml
+  mapper-locations: classpath:mapper/oracle/**/*.xml
 
 logging:
   level:
